--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,4 @@
-language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-script: make test
-install:
-  - pip install . --use-mirrors
+language: go
 notifications:
   irc:
     channels:
