--- a/.github/workflows/asciinema.yml
+++ b/.github/workflows/asciinema.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.4, 3.5, 3.6, 3.7, 3.8, 3.9]
+        python: [3.6, 3.7, 3.8, 3.9]
     env:
       TERM: dumb
     steps:
