--- a/tests/distros/Dockerfile.alpine
+++ b/tests/distros/Dockerfile.alpine
@@ -1,8 +1,8 @@
 # syntax=docker/dockerfile:1.3
 
-FROM docker.io/library/centos:7
+FROM docker.io/library/alpine:3.14
 
-RUN yum install -y epel-release && yum install -y python36 && yum clean all
+RUN apk --no-cache add bash ca-certificates python3
 
 WORKDIR /usr/src/app
 
