--- a/tests/distros/Dockerfile.ubuntu
+++ b/tests/distros/Dockerfile.ubuntu
@@ -1,13 +1,31 @@
-FROM ubuntu:16.04
+# syntax=docker/dockerfile:1.3
 
-RUN apt-get update && apt-get install -y \
-    ca-certificates \
-    locales \
-    python3
-RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+FROM docker.io/library/ubuntu:20.04
+
+ENV DEBIAN_FRONTENT="noninteractive"
+
+RUN apt-get update \
+    && apt-get install -y \
+        ca-certificates \
+        locales \
+        python3 \
+    && localedef \
+        -i en_US \
+        -c \
+        -f UTF-8 \
+        -A /usr/share/locale/locale.alias \
+        en_US.UTF-8 \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /usr/src/app
-COPY asciinema asciinema
-COPY tests tests
-ENV LANG en_US.utf8
-ENV SHELL /bin/bash
-ENV USER docker
+
+COPY asciinema/ asciinema/
+COPY tests/ tests/
+
+ENV LANG="en_US.utf8"
+
+USER nobody
+
+ENTRYPOINT ["/bin/bash"]
+
+# vim:ft=dockerfile
