--- a/tests/distros/Dockerfile.centos
+++ b/tests/distros/Dockerfile.centos
@@ -2,7 +2,7 @@
 
 FROM docker.io/library/centos:7
 
-RUN yum install -y epel-release && yum install -y python36 && yum clean all
+RUN yum install -y epel-release && yum install -y make python36 && yum clean all
 
 WORKDIR /usr/src/app
 
