--- a/tests/distros/Dockerfile.debian
+++ b/tests/distros/Dockerfile.debian
@@ -8,6 +8,7 @@ RUN apt-get update \
     && apt-get install -y \
         ca-certificates \
         locales \
+        make \
         procps \
         python3 \
     && localedef \
