[test] Configure pylint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,7 @@ exclude = []
 [tool.pylint."MESSAGES CONTROL"]
 disable = [
     "invalid-name",
+    "missing-class-docstring",
+    "missing-function-docstring",
+    "missing-module-docstring",
 ]
