Add a MIME type and a desktop file to open recordings

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,12 @@ share/doc/asciinema =
     doc/asciicast-v2.md
 share/man/man1 =
     man/asciinema.1
+share/mime/packages =
+    mime/x-asciinema.xml
+share/applications =
+    mime/asciinema.desktop
+share/icons/hicolor/256x256/mimetypes =
+    asciinema/data/application-x-asciinema.png
 
 [pycodestyle]
 ignore = E501,E402,E722
