Replace nose with unittest

--- a/asciinema/tests/distros/Dockerfile.centos
+++ b/asciinema/tests/distros/Dockerfile.centos
@@ -1,9 +1,9 @@
-FROM fedora:26
+FROM centos:7
 
-RUN dnf install -y python3 procps
+RUN yum install -y epel-release
+RUN yum install -y python34
 WORKDIR /usr/src/app
 COPY asciinema asciinema
-COPY tests tests
 ENV LANG en_US.utf8
 ENV SHELL /bin/bash
 ENV USER docker
