--- a/asciinema/tests/distros/Dockerfile.fedora
+++ b/asciinema/tests/distros/Dockerfile.fedora
@@ -1,10 +1,8 @@
-FROM centos:7
+FROM fedora:26
 
-RUN yum install -y epel-release
-RUN yum install -y python34
+RUN dnf install -y python3 procps
 WORKDIR /usr/src/app
 COPY asciinema asciinema
-COPY tests tests
 ENV LANG en_US.utf8
 ENV SHELL /bin/bash
 ENV USER docker
