--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Topic :: System :: Shells
     Topic :: Terminals
-    Topic :: Utilities'
+    Topic :: Utilities
 
 [options]
 include_package_data = True
