[style] Add additional pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,12 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
     hooks:
+      - id: check-ast
+      - id: check-json
+      - id: check-toml
       - id: check-yaml
       - id: end-of-file-fixer
+      - id: requirements-txt-fixer
       - id: trailing-whitespace
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
@@ -29,3 +33,8 @@ repos:
           - --remove-all-unused-imports
           - --remove-duplicate-keys
           - --remove-unused-variables
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.931"
+    hooks:
+      - id: mypy
+        exclude: tests
