Add shell completions by shtab
asciinema --print-completion bash | sudo tee /usr/share/bash-completion/completions/asciinema
asciinema --print-completion zsh | sudo tee /usr/share/zsh/site-functions/_asciinema
asciinema --print-completion tcsh | sudo tee /etc/profile.d/asciinema.completion.csh

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,10 @@ packages =
     asciinema.commands
 install_requires =
 
+[options.extras_require]
+completion =
+    shtab
+
 [options.package_data]
 asciinema = data/*.png
 
