Implement basic "PTY exec" in Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+nix = { version = "0.27", features = [ "fs", "term", "process" ] }
+mio = { version ="0.8", features = ["os-poll", "os-ext"] }
+termion = "2.0.1"
