--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ anyhow = "1.0.75"
 nix = { version = "0.27", features = [ "fs", "term", "process", "signal" ] }
 mio = { version ="0.8", features = ["os-poll", "os-ext"] }
 termion = "2.0.1"
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.107"
+
+[dev-dependencies]
+tempfile = "3.8.0"
