--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ mio = { version ="0.8", features = ["os-poll", "os-ext"] }
 termion = "2.0.1"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
+clap = { version = "4.4.7", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.8.0"
