--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ termion = "2.0.1"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 clap = { version = "4.4.7", features = ["derive"] }
+signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
+signal-hook = "0.3.17"
