🚚 Rename x-asciinema MimeType to x-asciicast

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,11 +55,11 @@ share/doc/asciinema =
 share/man/man1 =
     man/asciinema.1
 share/mime/packages =
-    mime/x-asciinema.xml
+    mime/x-asciicast.xml
 share/applications =
     mime/asciinema.desktop
 share/icons/hicolor/256x256/mimetypes =
-    asciinema/data/application-x-asciinema.png
+    asciinema/data/application-x-asciicast.png
 
 [pycodestyle]
 ignore = E501,E402,E722
