--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0.107"
 clap = { version = "4.4.7", features = ["derive"] }
 signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
 signal-hook = "0.3.17"
+uuid = { version = "1.6.1", features = ["v4"] }
