--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ clap = { version = "4.4.7", features = ["derive"] }
 signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
 signal-hook = "0.3.17"
 uuid = { version = "1.6.1", features = ["v4"] }
+reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls", "multipart", "gzip", "json"] }
