--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ signal-hook = "0.3.17"
 uuid = { version = "1.6.1", features = ["v4"] }
 reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls", "multipart", "gzip", "json"] }
 rustyline = "13.0.0"
+config = { version = "0.13.4", default-features = false, features = ["toml", "ini"] }
