--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ uuid = { version = "1.6.1", features = ["v4"] }
 reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls", "multipart", "gzip", "json"] }
 rustyline = "13.0.0"
 config = { version = "0.13.4", default-features = false, features = ["toml", "ini"] }
+which = "5.0.0"
