--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ tower-http = { version = "0.5.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 rgb = "0.8.37"
+
+[profile.release]
+strip = true
