--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ tower-http = { version = "0.5.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 rgb = "0.8.37"
+url = "2.5.0"
+tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
 
 [profile.release]
 strip = true
