Use CancellationToken for streamer shutdown

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ rgb = "0.8.37"
 url = "2.5.0"
 tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
 sha2 = "0.10.8"
+tokio-util = "0.7.10"
 
 [profile.release]
 strip = true
