Fix uploaded asset names in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,4 +85,6 @@ jobs:
       - name: Upload the binary to the release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.ref_name }} target/${{ matrix.target }}/release/asciinema#asciinema-${{ matrix.target }}
+        run: |
+          mv target/${{ matrix.target }}/release/asciinema target/release/asciinema-${{ matrix.target }}
+          gh release upload ${{ github.ref_name }} target/release/asciinema-${{ matrix.target }}
