--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,10 @@ tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"]
 sha2 = "0.10.8"
 tokio-util = "0.7.10"
 
+[build-dependencies]
+clap = { version = "4.4.7", features = ["derive"] }
+clap_mangen = "0.2.20"
+url = "2.5.0"
+
 [profile.release]
 strip = true
