--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0.107"
 clap = { version = "4.4.7", features = ["derive"] }
 signal-hook = { version = "0.3.17", default-features = false }
 uuid = { version = "1.6.1", features = ["v4"] }
-reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
+reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
 rustyline = "13.0.0"
 config = { version = "0.14.0", default-features = false, features = ["toml", "ini"] }
 which = "6.0.0"
@@ -40,7 +40,8 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 rgb = "0.8.37"
 url = "2.5.0"
-tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
+rustls = { version = "0.23.15", default-features = false, features = ["aws_lc_rs"] }
 sha2 = "0.10.8"
 tokio-util = "0.7.10"
 chrono = "0.4.38"
