--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ sha2 = "0.10.8"
 tokio-util = "0.7.10"
 chrono = "0.4.38"
 hostname = "0.4.0"
+regex = "1"
 
 [build-dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
