--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,22 +23,22 @@ clap = { version = "4.5.37", features = ["derive"] }
 signal-hook = { version = "0.3.17", default-features = false }
 uuid = { version = "1.6.1", features = ["v4"] }
 reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
-rustyline = "13.0.0"
-config = { version = "0.15.11", default-features = false, features = ["toml", "ini"] }
+rustyline = { version = "13.0.0", default-features = false }
+config = { version = "0.15.11", default-features = false, features = ["toml"] }
 which = "6.0.3"
 tempfile = "3.9.0"
 avt = "0.15.1"
 axum = { version = "0.8.4", default-features = false, features = ["http1", "ws"] }
-tokio = { version = "1.44.2", features = ["full"] }
-futures-util = "0.3.31"
-tokio-stream = { version = "0.1.17", features = ["sync"] }
+tokio = { version = "1.44.2", features = ["rt-multi-thread", "net", "sync", "time"] }
+futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
+tokio-stream = { version = "0.1.17", default-features = false, features = ["sync", "time"] }
 rust-embed = "8.2.0"
 tower-http = { version = "0.6.2", features = ["trace"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-rgb = "0.8.37"
+tracing = { version = "0.1.41", default-features = false }
+tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter"] }
+rgb = { version = "0.8.37", default-features = false }
 url = "2.5.0"
-tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
+tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
 rustls = { version = "0.23.26", default-features = false, features = ["aws_lc_rs"] }
 tokio-util = "0.7.10"
 
