--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ url = "2.5.0"
 tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
 rustls = { version = "0.23.26", default-features = false, features = ["aws_lc_rs"] }
 tokio-util = "0.7.10"
+rand = "0.9.1"
 
 [build-dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
