--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ rust-version = "1.75.0"
 [dependencies]
 anyhow = "1.0.98"
 nix = { version = "0.30", features = ["fs", "term", "process", "signal", "poll"] }
-termion = "3.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 clap = { version = "4.5.37", features = ["derive"] }
@@ -29,7 +28,7 @@ which = "6.0.3"
 tempfile = "3.9.0"
 avt = "0.16.0"
 axum = { version = "0.8.4", default-features = false, features = ["http1", "ws"] }
-tokio = { version = "1.44.2", features = ["rt-multi-thread", "net", "sync", "time"] }
+tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "sync", "time", "fs", "process"] }
 futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
 tokio-stream = { version = "0.1.17", default-features = false, features = ["sync", "time"] }
 rust-embed = "8.2.0"
@@ -42,6 +41,8 @@ tokio-tungstenite = { version = "0.26.2", default-features = false, features = [
 rustls = { version = "0.23.26", default-features = false, features = ["aws_lc_rs"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 rand = "0.9.1"
+async-trait = "0.1.88"
+signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 
 [build-dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
