--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ anyhow = "1.0.98"
 nix = { version = "0.30", features = ["fs", "term", "process", "signal", "poll"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-clap = { version = "4.5.37", features = ["derive"] }
+clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
 signal-hook = { version = "0.3.17", default-features = false }
 uuid = { version = "1.6.1", features = ["v4"] }
 reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
@@ -45,7 +45,7 @@ async-trait = "0.1.88"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 
 [build-dependencies]
-clap = { version = "4.5.37", features = ["derive"] }
+clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
 clap_complete = "4.5.48"
 clap_mangen = "0.2.26"
 url = "2.5.0"
