--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ uuid = { version = "1.6.1", features = ["v4"] }
 reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
 rustyline = { version = "13.0.0", default-features = false }
 config = { version = "0.15.11", default-features = false, features = ["toml"] }
-which = "6.0.3"
+which = "8.0.0"
 tempfile = "3.9.0"
 avt = "0.16.0"
 axum = { version = "0.8.4", default-features = false, features = ["http1", "ws"] }
@@ -38,7 +38,7 @@ tracing-subscriber = { version = "0.3.18", default-features = false, features = 
 rgb = { version = "0.8.37", default-features = false }
 url = "2.5.0"
 tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
-rustls = { version = "0.23.26", default-features = false, features = ["aws_lc_rs"] }
+rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 rand = "0.9.1"
 async-trait = "0.1.88"
