Convert upload command to async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_json = "1.0"
 clap = { version = "4.0", features = ["derive", "wrap_help"] }
 signal-hook = { version = "0.3", default-features = false }
 uuid = { version = "1.6", features = ["v4"] }
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json", "stream"] }
 rustyline = { version = "14.0", default-features = false }
 config = { version = "0.15", default-features = false, features = ["toml"] }
 which = "8.0"
