--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Marcin Kulik <m@ku1ik.com>"]
 homepage = "https://asciinema.org"
 repository = "https://github.com/asciinema/asciinema"
 description = "Terminal session recorder, streamer, and player"
-license = "GPL-3.0"
+license = "GPL-3.0-or-later"
 
 # MSRV
 rust-version = "1.75.0"
